Sync all content

--- a/content/resources/21m-301s05.md
+++ b/content/resources/21m-301s05.md
@@ -8,9 +8,10 @@ file: /courses/21m-301-harmony-and-counterpoint-i-spring-2005/b98cc3acc6f587077d
 file_size: 98385
 file_type: image/jpeg
 image_metadata:
-  caption: "Image of Ludwig van Beethoven. (Image courtesy of\_[Library of Congress,\
-    \ Prints and Photographs Division](http://www.loc.gov/rr/print/)\_\\[reproduction\
-    \ number, LC-USZ62-13745 (b&w film copy neg.)\\].)"
+  caption: "Image of Ludwig van Beethoven. (Image courtesy of\_{{% resource_link \"\
+    70da2ac1-d0f0-45d7-8df2-14816fd72cd0\" \"Library of Congress, Prints and Photographs\
+    \ Division\" %}}\_\\[reproduction number, LC-USZ62-13745 (b&w film copy neg.)\\\
+    ].)"
   credit: ''
   image-alt: A black and white painting of Ludwig van Beethoven.
 learning_resource_types: []
