Sync all content

--- a/content/resources/21m-301s05-th.md
+++ b/content/resources/21m-301s05-th.md
@@ -4,12 +4,11 @@ description: New image Upload
 file: /courses/21m-301-harmony-and-counterpoint-i-spring-2005/8aac674dd318cb76e2aaa55393fe3718_21m-301s05-th.jpg
 file_size: 11171
 file_type: image/jpeg
-hide_download: true
-hide_download_original: null
 image_metadata:
-  caption: "Image of Ludwig van Beethoven. (Image courtesy of\_[Library of Congress,\
-    \ Prints and Photographs Division](http://www.loc.gov/rr/print/)\_\\[reproduction\
-    \ number, LC-USZ62-13745 (b&w film copy neg.)\\].)"
+  caption: "Image of Ludwig van Beethoven. (Image courtesy of\_{{% resource_link \"\
+    70da2ac1-d0f0-45d7-8df2-14816fd72cd0\" \"Library of Congress, Prints and Photographs\
+    \ Division\" %}}\_\\[reproduction number, LC-USZ62-13745 (b&w film copy neg.)\\\
+    ].)"
   credit: ''
   image-alt: A black and white painting of Ludwig van Beethoven.
 learning_resource_types: []
